--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -23,5 +23,17 @@ autostash DOCKER_DEVBOX_PORT_PREFIX={{portPrefix}}
 # Docker Compose project name. Will use the directory name if not defined.
 # autostash COMPOSE_PROJECT_NAME={{projectName}}
 
+# Name of the reverse-proxy (nginx-proxy or traefik)
+autostash DOCKER_DEVBOX_REVERSE_PROXY="${DOCKER_DEVBOX_REVERSE_PROXY:-traefik}"
+
 # Name of the reverse-proxy network
-autostash REVERSE_PROXY_NETWORK="${REVERSE_PROXY_NETWORK:-reverse-proxy}"
+autostash DOCKER_DEVBOX_REVERSE_PROXY_NETWORK="${DOCKER_DEVBOX_REVERSE_PROXY_NETWORK:-reverse-proxy}"
+
+# Path to install generated certificates
+autostash DOCKER_DEVBOX_CERTS_PATH="${DOCKER_DEVBOX_CERTS_PATH:-$HOME/.certs}"
+
+# Path to docker-devbox-nginx-proxy installation
+autostash DOCKER_DEVBOX_NGINX_PROXY_PATH="${DOCKER_DEVBOX_NGINX_PROXY_PATH:-$HOME/.nginx-proxy}"
+
+# Path to docker-devbox-traefik installation
+autostash DOCKER_DEVBOX_TRAEFIK_PATH="${DOCKER_DEVBOX_TRAEFIK_PATH:-$HOME/.traefik}"
