Remove files now available in docker-devbox-scripts

--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -12,7 +12,7 @@ autostash DOCKER_DEVBOX_DOMAIN_PREFIX={{projectName}}
 autostash DOCKER_DEVBOX_DOMAIN=test
 
 # Enable SSL Certificate generation. Can be "mkcert", "cfssl-cli" or "false" to disable.
-autostash DOCKER_DEVBOX_SSL=false
+autostash DOCKER_DEVBOX_SSL=cfssl-cli
 
 # Docker compose restart policy for services containers
 autostash DOCKER_DEVBOX_RESTART_POLICY="no"
@@ -22,15 +22,3 @@ autostash DOCKER_DEVBOX_PORT_PREFIX={{portPrefix}}
 
 # Docker Compose project name. Will use the directory name if not defined.
 # autostash COMPOSE_PROJECT_NAME={{projectName}}
-
-# Name of the reverse-proxy network
-autostash DOCKER_DEVBOX_REVERSE_PROXY_NETWORK="${DOCKER_DEVBOX_REVERSE_PROXY_NETWORK:-reverse-proxy}"
-
-# Path to install generated certificates
-autostash DOCKER_DEVBOX_CERTS_PATH="${DOCKER_DEVBOX_CERTS_PATH:-$HOME/.certs}"
-
-# Path to docker-devbox-nginx-proxy installation
-autostash DOCKER_DEVBOX_NGINX_PROXY_PATH="${DOCKER_DEVBOX_NGINX_PROXY_PATH:-$HOME/.nginx-proxy}"
-
-# Path to docker-devbox-traefik installation
-autostash DOCKER_DEVBOX_TRAEFIK_PATH="${DOCKER_DEVBOX_TRAEFIK_PATH:-$HOME/.traefik}"
