Replace $DOCKER_DEVBOX_DIR with $DOCKER_DEVBOX_SCRIPTS_PATH when importing lib

--- a/generators/app/features/mariadb/templates/.bin/mysql.hbs
+++ b/generators/app/features/mariadb/templates/.bin/mysql.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env bash
-. "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
+. "$DOCKER_DEVBOX_SCRIPTS_PATH/.bash.lib.d/50-docker"
 
 run --user root --workdir="$(_docker_workdir "/workdir")" {{instance.name}} mysql -h{{instance.name}} -u{{projectName}} -p{{projectName}} "$@"
