--- a/generators/app/features/common/php/templates/.bin/drush.hbs
+++ b/generators/app/features/common/php/templates/.bin/drush.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env bash
-. "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
+. "$DOCKER_DEVBOX_SCRIPTS_PATH/.bash.lib.d/50-docker"
 
 run --user www-data --entrypoint drush --workdir="$(_docker_workdir "/var/www/html")" {{instance.name}} "$@"
