--- a/generators/app/features/node/templates/.bin/create-react-app.hbs
+++ b/generators/app/features/node/templates/.bin/create-react-app.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env bash
-. "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
+. "$DOCKER_DEVBOX_SCRIPTS_PATH/.bash.lib.d/50-docker"
 
 run$PORTS --workdir="$(_docker_workdir "/app")" --entrypoint create-react-app {{instance.name}} "$@"
