Remove $PORTS from npx command

--- a/generators/app/features/node/templates/.bin/npx.hbs
+++ b/generators/app/features/node/templates/.bin/npx.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env bash
 . "$DOCKER_DEVBOX_SCRIPTS_PATH/.bash.lib.d/50-docker"
 
-run$PORTS --workdir="$(_docker_workdir "/app")" --entrypoint npx {{instance.name}} "$@"
+run --workdir="$(_docker_workdir "/app")" --entrypoint npx {{instance.name}} "$@"
