--- a/generators/app/features/node/templates/.bin/npm.hbs
+++ b/generators/app/features/node/templates/.bin/npm.hbs
@@ -1,11 +1,4 @@
 #!/usr/bin/env bash
 . "$DOCKER_DEVBOX_SCRIPTS_PATH/.bash.lib.d/50-docker"
 
-if [ "$1" == "serve" ] || { [ "$1" == "run" ] && [ "$2" == "serve" ]; }; then
-  PORTS=" -p ${DOCKER_DEVBOX_PORT_PREFIX}88:80"
-  echo "Port mapping:$PORTS"
-else
-  PORTS=""
-fi
-
-run$PORTS --workdir="$(_docker_workdir "/app")" --entrypoint npm {{instance.name}} "$@"
+run --workdir="$(_docker_workdir "/app")" --entrypoint npm {{instance.name}} "$@"
