Use USER_ID/GROUP_ID instead of HOST_UID/HOST_GID

--- a/generators/app/features/mysql/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/mysql/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -5,4 +5,4 @@ FROM mysql:{{mysqlVersion}}
 RUN mkdir /workdir
 VOLUME /workdir
 
-RUN usermod -u ${HOST_UID:-1000} mysql && groupmod -g ${HOST_GID:-1000} mysql
+RUN usermod -u ${USER_ID:-1000} mysql && groupmod -g ${GROUP_ID:-1000} mysql
