--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -118,8 +118,8 @@ RUN apt-get update -y && apt-get install -y ssmtp && rm -rf /var/lib/apt/lists/*
 {{/hasFeature}}
 
 # Fix write permissions on Linux/Mac
-RUN usermod -u ${HOST_UID:-1000} www-data \
-&& groupmod -g ${HOST_GID:-1000} www-data
+RUN usermod -u ${USER_ID:-1000} www-data \
+&& groupmod -g ${GROUP_ID:-1000} www-data
 {{#inArray phpTools "composer"}}
 
 RUN chown -R www-data:www-data $COMPOSER_HOME
