--- a/generators/app/features/mysql/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/mysql/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -5,4 +5,6 @@ FROM mysql:{{mysqlVersion}}
 RUN mkdir /workdir
 VOLUME /workdir
 
-RUN usermod -u ${USER_ID:-1000} mysql && groupmod -g ${GROUP_ID:-1000} mysql
+{{> fixuid}}
+
+USER mysql
