--- a/generators/app/features/postgresql/templates/.bin/psql.hbs
+++ b/generators/app/features/postgresql/templates/.bin/psql.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env bash
 . "$DOCKER_DEVBOX_SCRIPTS_PATH/.bash.lib.d/50-docker"
 
-run --user postgres --workdir="$(_docker_workdir "/workdir")" {{instance.name}} psql --dbname=postgres://{{projectName}}:{{projectName}}@{{instance.name}}/{{projectName}} "$@"
+run --workdir="$(_docker_workdir "/workdir")" {{instance.name}} psql --dbname=postgres://{{projectName}}:{{projectName}}@{{instance.name}}/{{projectName}} "$@"
