Enhance CA certificates configuration

--- a/generators/app/features/maildev/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/maildev/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -1,5 +1,7 @@
 FROM djfarrelly/maildev
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
+\{{#DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
 
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN apk add --update ca-certificates && update-ca-certificates
+\{{/DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
