--- a/generators/app/features/node/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/node/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -1,10 +1,11 @@
 FROM node:{{nodeVersion}}
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
+\{{#DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
 
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN update-ca-certificates
-
 ENV NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt
+\{{/DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
 
 # Mise à jour de npm
 RUN npm i --global npm
