--- a/generators/app/features/sonar-scanner/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/sonar-scanner/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -1,8 +1,10 @@
 FROM newtmitch/sonar-scanner:3.2.0-alpine
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
+\{{#DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
 
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN apk add --update ca-certificates && update-ca-certificates
+\{{/#DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
 
 ENTRYPOINT ["sonar-scanner", "-Dsonar.projectBaseDir=/root/src"]
 CMD []
