Add fixuid.tar.gz to gitignore

--- a/generators/app/templates/.gitignore.hbs
+++ b/generators/app/templates/.gitignore.hbs
@@ -2,6 +2,7 @@
 /.docker/.ca-certificates
 /.docker-compose.env
 /.docker/*/Dockerfile
+/.docker/fixuid.tar.gz
 /.init/
 /.bash_enter.env
 /.traefik/*.ssl.toml
