Add docker registry repository variable

--- a/generators/app/templates/.bash_enter.config.hbs
+++ b/generators/app/templates/.bash_enter.config.hbs
@@ -12,6 +12,9 @@ autostash DOCKER_DEVBOX_ENV_SYMLINKS="{{envFiles}}"
 # Directories ending with "[*]" will be processed recursively.
 autostash DOCKER_DEVBOX_MO_DIRS="{{moDirectories}}"
 
+# Docker registry repository name to use
+autostash DOCKER_DEVBOX_REGISTRY_REPOSITORY="{{registryRepository}}"
+
 # Set self signed CA certificates (cfssl/mkcert) into containers.
 # You may need this if containers communicates with each others through their https public name.
 # autostash DOCKER_DEVBOX_COPY_SELF_CA_CERTIFICATE=1
