Update gitignore to match last docker-devbox version

--- a/generators/app/templates/.gitignore.hbs
+++ b/generators/app/templates/.gitignore.hbs
@@ -2,9 +2,11 @@
 /.docker-compose.resolved.yml
 /.docker-compose.*.resolved.yml
 /.docker/.ca-certificates
+/.docker/*/.ca-certificates
 /.docker-compose.env
 /.docker/*/Dockerfile
 /.docker/fixuid.tar.gz
+/.docker/*/fixuid.tar.gz
 /.init/
 /.bash_enter.env
 /.traefik/*.ssl.toml
