Add _RUN_REVERSE_PROXY_ENABLE when running yarn with serve command

--- a/generators/app/features/node/templates/.bin/yarn.hbs
+++ b/generators/app/features/node/templates/.bin/yarn.hbs
@@ -1,4 +1,8 @@
 #!/usr/bin/env bash
 . "$DOCKER_DEVBOX_SCRIPTS_PATH/.bash.lib.d/50-docker"
 
+if [ "$1" == "serve" ] || { [ "$1" == "run" ] && [ "$2" == "serve" ]; }; then
+ export _RUN_REVERSE_PROXY_ENABLE=1
+fi
+
 run --workdir="$(_docker_workdir "/app")" {{instance.name}} yarn "$@"
