--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -106,17 +106,13 @@ RUN apt-get update -y && apt-get install -y lsb-release \
 {{/inArray}}
 {{#hasFeature 'mailcatcher'}}
 
-RUN apt-get update -y && apt-get install -y ssmtp && rm -rf /var/lib/apt/lists/* \
-&& echo "FromLineOverride=YES" >> /etc/ssmtp/ssmtp.conf \
-&& echo "mailhub=mailcatcher.\{{COMPOSE_NETWORK_NAME}}" >> /etc/ssmtp/ssmtp.conf \
-&& echo 'sendmail_path = "/usr/sbin/ssmtp -t"' > /usr/local/etc/php/conf.d/mail.ini
+RUN apt-get update -y && apt-get install -y msmtp msmtp-mta && rm -rf /var/lib/apt/lists/* \
+&& echo 'sendmail_path = "/usr/sbin/sendmail -t -i"' > /usr/local/etc/php/conf.d/mail.ini
 {{/hasFeature}}
 {{#hasFeature 'maildev'}}
 
-RUN apt-get update -y && apt-get install -y ssmtp && rm -rf /var/lib/apt/lists/* \
-&& echo "FromLineOverride=YES" >> /etc/ssmtp/ssmtp.conf \
-&& echo "mailhub=maildev.\{{COMPOSE_NETWORK_NAME}}" >> /etc/ssmtp/ssmtp.conf \
-&& echo 'sendmail_path = "/usr/sbin/ssmtp -t"' > /usr/local/etc/php/conf.d/mail.ini
+RUN apt-get update -y && apt-get install -y msmtp msmtp-mta && rm -rf /var/lib/apt/lists/* \
+&& echo 'sendmail_path = "/usr/sbin/sendmail -t -i"' > /usr/local/etc/php/conf.d/mail.ini
 {{/hasFeature}}
 {{#inArray phpTools "composer"}}
 
