--- a/generators/app/features/sonar-scanner/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/sonar-scanner/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -4,7 +4,7 @@ FROM newtmitch/sonar-scanner:3.2.0-alpine
 
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN apk add --update ca-certificates && update-ca-certificates
-\{{/#DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
+\{{/DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
 
 ENTRYPOINT ["sonar-scanner", "-Dsonar.projectBaseDir=/root/src"]
 CMD []
