--- a/generators/app/features/php-fpm-apache/templates/.docker/[instances.web.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/php-fpm-apache/templates/.docker/[instances.web.name]/Dockerfile.mo.hbs
@@ -11,7 +11,7 @@ RUN mkdir -p /usr/local/apache2/conf/custom \
 && mkdir -p /var/www/html \
 && sed -i '/LoadModule proxy_module/s/^#//g' /usr/local/apache2/conf/httpd.conf \
 && sed -i '/LoadModule proxy_fcgi_module/s/^#//g' /usr/local/apache2/conf/httpd.conf \
-&& echo >> /usr/local/apache2/conf/httpd.conf && echo 'Include conf/custom/*.conf' >> /usr/local/apache2/conf/httpd.conf
+&& echo >> /usr/local/apache2/conf/httpd.conf && echo 'IncludeOptional conf/custom/*.conf' >> /usr/local/apache2/conf/httpd.conf
 
 {{#inArray apacheExtensions "rewrite"}}
 
