--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -1,5 +1,4 @@
-FROM php:{{phpVersion}}-{{phpMode}}-stretch
-# Use debian stretch instead of buster as a temporary workaround for docker-library/php#865
+FROM php:{{phpVersion}}-{{phpMode}}
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
 \{{#DOCKER_DEVBOX_COPY_CA_CERTIFICATES}}
 
