Fix wkhtmltopdf with debian buster

--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -110,8 +110,9 @@ curl -fsSL https://downloads.mariadb.com/MariaDB/mariadb_repo_setup | bash -s --
 {{/inArray}}
 {{#inArray phpTools "wkhtmltopdf"}}
 
+# Using stretch packaging because buster release is not available $(lsb_release -cs) (https://github.com/wkhtmltopdf/wkhtmltopdf/issues/4416)
 RUN apt-get update -y && apt-get install -y lsb-release \
-&& curl -fsSL -o ./wkhtmltopdf.deb https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.$(lsb_release -cs)_amd64.deb \
+&& curl -fsSL -o ./wkhtmltopdf.deb https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.stretch_amd64.deb \
 && apt-get install -y ./wkhtmltopdf.deb && rm -rf /var/lib/apt/lists/* \
 && rm wkhtmltopdf.deb
 {{/inArray}}
