--- a/generators/app/partials/fixuid.hbs
+++ b/generators/app/partials/fixuid.hbs
@@ -3,4 +3,4 @@ ADD fixuid.tar.gz /usr/local/bin
 RUN chown root:root /usr/local/bin/fixuid && \
     chmod 4755 /usr/local/bin/fixuid && \
     mkdir -p /etc/fixuid
-COPY {{instance.name}}/fixuid.yml /etc/fixuid/config.yml
+COPY fixuid.yml /etc/fixuid/config.yml
