--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -27,10 +27,7 @@ RUN apt-get update -y && apt-get install -y zlib1g-dev libzip-dev && rm -rf /var
 {{/inArray}}
 {{#inArray phpExtensions "xdebug"}}
 
-RUN yes | pecl install xdebug{{#semver phpVersion '<7'}}-2.5.5{{/semver}} \
-&& echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
-&& echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
-&& echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/xdebug.ini
+RUN yes | pecl install xdebug{{#semver phpVersion '<7'}}-2.5.5{{/semver}} && docker-php-ext-enable xdebug
 {{/inArray}}
 {{#hasFeature 'postgresql'}}
 
