--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -21,7 +21,7 @@ autostash DOCKER_DEVBOX_RESTART_POLICY="no"
 autostash DOCKER_DEVBOX_PORT_PREFIX={{portPrefix}}
 
 # Docker Compose project name. Will use the directory name if not defined.
-# autostash COMPOSE_PROJECT_NAME={{projectName}}
+autostash COMPOSE_PROJECT_NAME={{projectName}}
 
 # Set the following environment variable to disable copy of CA certificates in containers.
 # autostash DOCKER_DEVBOX_DISABLE_COPY_CA_CERTIFICATES=1
