--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -25,3 +25,6 @@ autostash COMPOSE_PROJECT_NAME={{projectName}}
 
 # Set the following environment variable to disable copy of CA certificates in containers.
 # autostash DOCKER_DEVBOX_DISABLE_COPY_CA_CERTIFICATES=1
+
+# Disable reverse proxy services configuration.
+# autostash DOCKER_DEVBOX_DISABLE_REVERSE_PROXY_SERVICES=1
