--- a/generators/app/templates/.gitignore.hbs
+++ b/generators/app/templates/.gitignore.hbs
@@ -1,6 +1,8 @@
 /docker-compose.override.yml
 /.docker-compose.resolved.yml
 /.docker-compose.*.resolved.yml
+/.docker-compose.generated.yml
+/.docker-compose.*.generated.yml
 /.docker/.ca-certificates
 /.docker/*/.ca-certificates
 /.docker-compose.env
