Added directive client_max_body_size to nginx.conf
Nginx has a directive for request body size set by default to 1Mo which conflicts with settings of max_upload_size of PHP. Set this directive to 0 to bypass this funcitionnality (only for dev purpose)

--- a/generators/app/features/php-fpm-nginx/templates/.docker/[instances.web.name]/nginx.conf.mo.hbs
+++ b/generators/app/features/php-fpm-nginx/templates/.docker/[instances.web.name]/nginx.conf.mo.hbs
@@ -1,6 +1,7 @@
 server {
     root /var/www/html/{{instances.web.name}};
     index index.html index.php;
+    client_max_body_size 0;
 
     location ~ '\.php$' {
         fastcgi_split_path_info ^(.+?\.php)(|/.*)$;
