Add letsencrypt as possible value to DOCKER_DEVBOX_SSL

--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -11,7 +11,7 @@ autostash DOCKER_DEVBOX_DOMAIN_PREFIX={{projectName}}
 # Domain name to use for virtual host
 autostash DOCKER_DEVBOX_DOMAIN=test
 
-# Enable SSL Certificate generation. Can be "mkcert", "cfssl-cli" or "false" to disable.
+# Enable SSL Certificate generation. Can be "mkcert", "cfssl-cli", "letsencrypt" or "false" to disable.
 autostash DOCKER_DEVBOX_SSL=cfssl-cli
 
 # Docker compose restart policy for services containers
