set correct tag for composer 2

--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -47,7 +47,7 @@ ENV COMPOSER_HOME /composer
 ENV PATH /composer/vendor/bin:$PATH
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
-COPY --from=composer /usr/bin/composer /usr/bin/composer
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 {{#semver phpVersion '<7'}}
 RUN echo "date.timezone=${PHP_TIMEZONE:-UTC}" > $PHP_INI_DIR/conf.d/composer.ini \
