Composer install fails (#26)
Copy from composer image instead off classic installation

--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -47,12 +47,8 @@ ENV COMPOSER_HOME /composer
 ENV PATH /composer/vendor/bin:$PATH
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
-RUN curl -fsSL -o /tmp/composer-setup.php https://getcomposer.org/installer \
-&& curl -fsSL -o /tmp/composer-setup.sig https://composer.github.io/installer.sig \
-&& php -r "if (hash('SHA384', file_get_contents('/tmp/composer-setup.php')) !== trim(file_get_contents('/tmp/composer-setup.sig'))) { unlink('/tmp/composer-setup.php'); echo 'Invalid installer' . PHP_EOL; exit(1); }" \
-&& php /tmp/composer-setup.php --no-ansi --install-dir=/usr/local/bin --filename=composer --snapshot && rm -rf /tmp/composer-setup.php \
-&& apt-get update -y && apt-get install -y git zip unzip && rm -rf /var/lib/apt/lists/* \
-&& composer global require hirak/prestissimo
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+
 {{#semver phpVersion '<7'}}
 RUN echo "date.timezone=${PHP_TIMEZONE:-UTC}" > $PHP_INI_DIR/conf.d/composer.ini \
 && echo "always_populate_raw_post_data=-1" > $PHP_INI_DIR/conf.d/composer.ini
